@@ -11,5 +11,13 @@ class Landscape(abc.ABC):
         pass
 
     def get_fitness(self, sequences):
+        """
+        Args:
+            sequences: A list/numpy array of sequence strings to be scored
+
+        Returns:
+            np.ndarray(float): Scores for each sequence
+        """
+
         self.cost += len(sequences)
         return self._fitness_function(sequences)
